# uv-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  mirror.py  pyproject.toml  requirements-dev.txt  uv_update_requirements.py
.github/workflows/: main.yml  release.yml
hooks/: uvsync.py
